fullSandbox11072023/force-app/main/default/objects/Marketing_Email_Stats__c/Marketing_Email_Stats__c.object-meta.xml
<CustomObject>
    <label>Marketing Email Stats</label>
    <nameField>
        <displayFormat>MSTATS-{000000}</displayFormat>
        <label>Marketing Email Stats</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Marketing Email Stats</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>