fullSandbox11072023/force-app/main/default/objects/Marketing_Email_Stats__c/fields/Action_Performed__c.field-meta.xml
<CustomField>
    <fullName>Action_Performed__c</fullName>
    <formula>if(Action__c = &quot;dc&quot;, &quot;Download Content&quot;,
if(Action__c = &quot;u&quot;, &quot;Unsubscribe&quot;,
if(Action__c = &quot;wl&quot;, &quot;Web Link&quot;,
&quot;&quot;
)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Action Performed</label>
    <type>Text</type>
</CustomField>