fullSandbox11072023/force-app/main/default/objects/Marketing_Email_Stats__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Marketing Email Stats</relationshipLabel>
    <relationshipName>Marketing_Email_Stats</relationshipName>
    <type>Lookup</type>
</CustomField>