fullSandbox11072023/force-app/main/default/objects/Marketing_Email_Stats__c/fields/Destination_Link__c.field-meta.xml
<CustomField>
    <fullName>Destination_Link__c</fullName>
    <label>Destination Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>