fullSandbox11072023/force-app/main/default/objects/Marketing_Email_Stats__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Marketing Email Stats</relationshipLabel>
    <relationshipName>Marketing_Email_Stats</relationshipName>
    <type>Lookup</type>
</CustomField>