fullSandbox11072023/force-app/main/default/objects/Marketing_Email_Stats__c/fields/Person_ID__c.field-meta.xml
<CustomField>
    <fullName>Person_ID__c</fullName>
    <label>Person ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>